# shuttle

./: .gitignore  CLAUDE.md  LICENSE  README.md  export_prototype.py  pyproject.toml  sample-export.md  test_format_age.sh  test_idle_precision.sh  test_terminal_launch.sh
.claude/: settings.local.json
briefs/: whoami-feature.md
completions/: shuttle.bash
index/: __init__.py  builder.py  cli.py  query.py  schema.py
parser/: PROPERTY_TESTS.md  TEST_DESIGN.md  __init__.py  conftest.py  enrich.py  extract_pairs.py  models.py  parse.py  score_sessions.py  serialize.py  session.py  test_extract_pairs.py  test_harden.py  test_parser.py  tree.py
shuttlelib/: __init__.py  cli.py  codex_hook.py  sessions.py  supervisor.py
tests/: conftest.py  test_codex_hook.py  test_sessions.py  test_shuttle_cli.py  test_supervisor.py
tests/fixtures/codex-0.144.1/: README.md  permission_request.json  session_start.json  stop.json  user_prompt_submit.json
