[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shuttle-session-registry"
version = "0.1.0"
description = "Structured launch records and provider hooks for Shuttle"
requires-python = ">=3.10"

[project.scripts]
shuttle-codex-hook = "shuttlelib.codex_hook:main"

[tool.setuptools.packages.find]
include = ["shuttlelib*"]

[tool.pytest.ini_options]
pythonpath = ["."]
